<resources>
    <string name="appName" translatable="false">GitNex</string>
    <string name="appEmail" translatable="false">hello@gitnex.com</string>
    <string name="appRepo" translatable="false">Source code</string>
    <string name="appRepoLink" translatable="false">https://codeberg.org/gitnex/GitNex</string>
    <string name="appWebsiteLink" translatable="false">https://gitnex.com/</string>
    <string name="commitPage" translatable="false">Your Instance Version</string>
    <string name="supportLinkPatreon" translatable="false">https://www.patreon.com/mmarif</string>
    <string name="feedbackLink" translatable="false">https://cloud.swatian.com/apps/forms/s/xe7KekTNKgrj58EK6WHQyJDf</string>
    <string name="appVersionBuild" translatable="false">%s / %d</string>
    <string name="appDesc" translatable="false">GitNex is a free, open-source Android client for Git repository management tools Forgejo and Gitea. GitNex is Licensed under GPLv3.\n\nThanks to all the contributors and donators for your generous work and donations.</string>
    <string name="crowdInLink" translatable="false">https://crowdin.com/project/gitnex</string>
    <string name="crashReportEmailSubject" translatable="false">[GitNex] - Crash Report #%1$d</string>
    <string name="translateWithCrowdin" translatable="false">Crowdin</string>
    <string name="translateText" translatable="false">Translate</string>
    <string name="supportText" translatable="false">Support</string>
    <string name="supportTextPatreon" translatable="false">Patreon</string>
    <string name="feedbackText" translatable="false">Feedback</string>
    <string name="token_help">Access Token Help</string>
    <string name="where_to_get_token_text" translatable="false"><u>Where can I get an access token?</u></string>
    <string name="where_to_get_token_message" translatable="false">
    \n• Log in to your account on your instance (Codeberg, etc.).
    \n• Click on your user profile picture, then go to Settings.
    \n• Under Applications, create a token with a name of your choice.
    \n• Choose All (public, private, and limited).
    \n• Under Select permissions, select Read and write for each dropdown.
    \n\nOnce created, copy and paste or type the token in the Token field.
    </string>
    <string name="ceColorFive" translatable="false">Five O Clock</string>
    <string name="ceColorBlueMoon" translatable="false">Blue Moon</string>
    <string name="ceIndentationTabs" translatable="false">Tabs</string>
    <string name="ceIndentationSpaces" translatable="false">Spaces</string>
    <string name="ceIndentationTabsWidth2" translatable="false">2</string>
    <string name="ceIndentationTabsWidth4" translatable="false">4</string>
    <string name="ceIndentationTabsWidth6" translatable="false">6</string>
    <string name="ceIndentationTabsWidth8" translatable="false">8</string>
    <string name="cacheSize0" translatable="false">250 MB</string>
    <string name="cacheSize1" translatable="false">500 MB</string>
    <string name="cacheSize2" translatable="false">1 GB</string>
    <string name="cacheSize3" translatable="false">2 GB</string>
    <string name="na" translatable="false">N/A</string>
    <string name="default_branch_name" translatable="false">main</string>
    <string name="discover_apps" translatable="false">Discover More Apps</string>
    <string name="dot" translatable="false">•</string>
    <string name="source_ref_hint" translatable="false">e.g., main, develop, or a commit SHA</string>
    <string name="version_format_hint" translatable="false">e.g., 1.26.1 (Gitea) or 15.0.0 (Forgejo)</string>
    <string name="navMyRepos">My Repositories</string>
    <string name="navStarredRepos">Starred Repositories</string>
    <string name="navRepos">Repositories</string>
    <string name="navProfile">Profile</string>
    <string name="navSettings">Settings</string>
    <string name="navOrg">Organizations</string>
    <string name="navAbout">About</string>
    <string name="navRate">Rate GitNex</string>
    <string name="navAdministration">Instance Administration</string>
    <string name="navMyIssues">My Issues</string>
    <string name="navMostVisited">Most Visited Repositories</string>
    <string name="navNotes">Notes</string>
    <string name="navAccount">Account Settings</string>
    <string name="navWatchedRepositories">Watched Repositories</string>
    <string name="pageTitleNewRepo">New Repository</string>
    <string name="pageTitleIssues">Issues</string>
    <string name="pageTitleCreateOrganization">New Organization</string>
    <string name="pageTitleCreateMilestone">New Milestone</string>
    <string name="pageTitleCreateNewIssue">New Issue</string>
    <string name="pageTitleCreateLabel">New Label</string>
    <string name="pageTitleCredits">Credits</string>
    <string name="pageTitleChooseBranch">Select Branch</string>
    <string name="pageTitleLabelUpdate">Update Label</string>
    <string name="pageTitleStarredRepos">Starred Repositories</string>
    <string name="pageTitleCreateTeam">New Team</string>
    <string name="pageTitleAddEmail">Add Email Address</string>
    <string name="pageTitleNewFile">New File</string>
    <string name="pageTitleExplore">Explore</string>
    <string name="pageTitleAdministration">Administration</string>
    <string name="pageTitleNewPullRequest">New Pull Request</string>
    <string name="pageTitleUsers">Users</string>
    <string name="pageTitleAddRepository">Add Repository</string>
    <string name="repoName">Demo repo</string>
    <string name="repoDescription">Demo description</string>
    <string name="orgName">Demo organization</string>
    <string name="newCreateButtonCopy">Create</string>
    <string name="newRepoTintCopy">Repository Name</string>
    <string name="newRepoDescTintCopy">Repository Description</string>
    <string name="newRepoPrivateCopy">Private</string>
    <string name="newRepoOwner">Owner</string>
    <string name="newRepoIssueLabels">Issue Labels</string>
    <string name="advanced" translatable="false">Advanced</string>
    <string name="defaultText" translatable="false">Default</string>
    <string name="setAsTemplate">Make repository a template</string>
    <string name="newOrgTintCopy">Organization Name</string>
    <string name="newOrgDescTintCopy">Organization Description</string>
    <string name="organizationFullname">%1$s - %2$s</string>
    <string name="userName">Username</string>
    <string name="passWord">Password</string>
    <string name="btnLogin">LOGIN</string>
    <string name="instanceUrl">Instance URL</string>
    <string name="navigationDrawerOpen">Open Navigation Drawer</string>
    <string name="navigationDrawerClose">Close Navigation Drawer</string>
    <string name="protocol">Protocol</string>
    <string name="malformedUrl">Couldn\'t connect to host. Please check your URL or port for any errors</string>
    <string name="protocolError">It is not recommended to use HTTP protocol unless you are testing on local network</string>
    <string name="malformedJson">Malformed JSON was received. Server response was not successful</string>
    <string name="emptyFieldURL">Instance URL is required</string>
    <string name="emptyFieldUsername">Username is required</string>
    <string name="emptyFieldName">Name is required</string>
    <string name="emptyFieldPassword">Password is required</string>
    <string name="protocolEmptyError">Protocol is required</string>
    <string name="instanceHelperText">Enter URL without http or https. Example: codeberg.org</string>
    <string name="checkNetConnection">Cannot access network, please check your Internet connection</string>
    <string name="network_error">Network error</string>
    <string name="failed_diff">Failed to load the diff</string>
    <string name="no_changes_found">No changes found for this file</string>
    <string name="repoNameErrorEmpty">Repository name is empty</string>
    <string name="repoNameErrorInvalid">Repository name is not valid. [a&#8211;z A&#8211;Z 0&#8211;9 &#8211; _]</string>
    <string name="repoNameErrorReservedName">Repository name is reserved</string>
    <string name="repoNameErrorReservedPatterns">Repository name contains reserved keywords</string>
    <string name="repoDescError">Repository description exceeds the max 255 characters limit</string>
    <string name="repoCreated">Repository created successfully</string>
    <string name="repoExistsError">Repository of this name already exists under selected Owner</string>
    <string name="repoOwnerError">Select owner for the repository</string>
    <string name="repoDefaultBranchError">The default branch must not be empty</string>
    <string name="orgNameErrorEmpty">Organization name is empty</string>
    <string name="orgNameErrorInvalid">Organization name is not valid, [a&#8211;z A&#8211;Z 0&#8211;9 &#8211; _]</string>
    <string name="orgDescError">Organization description exceeds the max 255 characters limit</string>
    <string name="orgCreated">Organization created successfully</string>
    <string name="orgExistsError">Organization already exists</string>
    <string name="diffStatistics">%1$s addition(s) and %2$s deletion(s)</string>
    <plurals name="repoStars">
        <item quantity="one">Star</item>
        <item quantity="other">Stars</item>
    </plurals>
    <plurals name="repoWatchers">
        <item quantity="one">Watcher</item>
        <item quantity="other">Watchers</item>
    </plurals>
    <plurals name="repoForks">
        <item quantity="one">Fork</item>
        <item quantity="other">Forks</item>
    </plurals>
    <plurals name="repoPullRequests">
        <item quantity="one">Pull request</item>
        <item quantity="other">Pull requests</item>
    </plurals>
    <plurals name="repoOpenIssues">
        <item quantity="one">Issue</item>
        <item quantity="other">Issues</item>
    </plurals>
    <string name="genericApiError">Instance has returned an error. Code %d</string>
    <string name="tabTextInfo">Details</string>
    <string name="tabTextFiles">Files</string>
    <string name="tabTextMl">Milestones</string>
    <string name="tabTextReleases">Releases</string>
    <string name="tabTextCollaborators">Collaborators</string>
    <string name="tabPullRequests">Pull Requests</string>
    <string name="pullRequest">Pull Request</string>
    <string name="infoTabRepoDefaultBranch">Default branch %1$s</string>
    <string name="infoTabRepoSshUrl">SSH URL</string>
    <string name="infoTabRepoCloneUrl">Clone URL</string>
    <string name="infoTabRepoRepoUrl">Repo URL</string>
    <string name="settingsLanguageHeaderText">Translation</string>
    <string name="settingsLanguageSelectorHeader">Language</string>
    <string name="settingsLanguageSelectedHeaderDefault">English</string>
    <string name="settingsHelpTranslateText">Translate GitNex via Crowdin</string>
    <string name="ceSyntaxHighlightColor">Syntax Highlighting Color</string>
    <string name="ceIndentation">Indentation</string>
    <string name="ceIndentationTabsWidth">Tabs Width</string>
    <string name="newTeamTitle">Team Name</string>
    <string name="newTeamPermission">Permission</string>
    <string name="newTeamAccessControls">Access Controls</string>
    <string name="userRoleAdmin">Admin</string>
    <string name="strMarkdown">Markdown</string>
    <string name="menuEditText">Edit</string>
    <string name="menuDeleteText">Delete</string>
    <string name="description">Description</string>
    <string name="close">Close</string>
    <string name="write">Write</string>
    <string name="code">Code</string>
    <string name="pageTitleNotifications">Notifications</string>
    <string name="isRead">Read</string>
    <string name="wiki">Wiki</string>
    <string name="codeEditor" translatable="false">Code Editor</string>
    <string name="attachment">Attachment</string>
    <string name="external_issues">External issues</string>
    <string name="external_wiki">External wiki</string>
</resources>