<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/attachment"
        android:icon="@drawable/ic_attachment"
        android:orderInCategory="0"
        android:title="@string/attachment"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/markdown"
        android:icon="@drawable/ic_markdown"
        android:orderInCategory="1"
        android:title="@string/strMarkdown"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/create"
        android:title="@string/newCreateButtonCopy"
        android:orderInCategory="2"
        android:contentDescription="@string/newCreateButtonCopy"
        app:showAsAction="ifRoom" />

</menu>
