<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dimen12dp"
        app:layout_constraintTop_toBottomOf="@id/drag_handle">

        <TextView
            android:id="@+id/sheet_title"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pageTitleCreateTeam"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="@style/Widget.Material3Expressive.Button.IconButton.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close"
            app:icon="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@id/sheet_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/sheet_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16dp"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/dimen12dp"
        android:paddingBottom="@dimen/dimen32dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teamNameLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8dp"
                android:hint="@string/newTeamTitle"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teamName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teamDescLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:hint="@string/description"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teamDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen24dp"
                android:text="@string/newTeamPermission"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/permission_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8dp"
                app:chipSpacingHorizontal="@dimen/dimen8dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_perm_read"
                    style="@style/CustomChipFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/isRead" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_perm_write"
                    style="@style/CustomChipFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_perm_admin"
                    style="@style/CustomChipFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userRoleAdmin" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen24dp"
                android:text="@string/newTeamAccessControls"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/access_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8dp"
                app:chipSpacingHorizontal="@dimen/dimen4dp"
                app:chipSpacingVertical="@dimen/dimen4dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_code"
                    style="@style/CustomChipFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_issues"
                    style="@style/CustomChipFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/pageTitleIssues" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_pulls"
                    style="@style/CustomChipFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pullRequest" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_release"
                    style="@style/CustomChipFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabTextReleases" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_wiki"
                    style="@style/CustomChipFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wiki" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_external_wiki"
                    style="@style/CustomChipFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/external_wiki" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_external_issues"
                    style="@style/CustomChipFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/external_issues" />

            </com.google.android.material.chip.ChipGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen32dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_create"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen56dp"
                    android:text="@string/newCreateButtonCopy"
                    app:cornerRadius="@dimen/dimen32dp" />

                <com.google.android.material.loadingindicator.LoadingIndicator
                    android:id="@+id/loading_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:indicatorSize="@dimen/dimen48dp"
                    app:trackThickness="@dimen/dimen4dp" />

            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
